# DataScienceProject

./: .env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  reads.csv
alembic/versions/: 2d7ecac53884_initial_migration.py  716224414d3c_initial_migration.py  7495b264fcf4_initial_migration.py  86997a7ea53e_initial_migration.py  8704471670ae_initial_migration.py  8ab4643e7ea0_add_user_avatar.py  91c20a01329b_initial_migration.py  978dbc69d4a1_initial_migration.py  9e1b7809839a_initial_migration.py  d0ead768378c_initial_migration.py  d81929201b48_initial_migration.py  e58879a20ee0_initial_tables.py  f8993bee6962_initial_migration.py
migrations/: env.py
migrations/versions/: 01ccea2fb6e9_user_phone_edit.py  0c3d0ef5979c_vehicle_mmodel_edit2.py  0f3cbe53096f_parking_record_edit3.py  10e7eaf5186d_user_password_change.py  12f3ae017524_initial_migration.py  21598470024f_init_migration.py  220c17193b01_parking_record_edit5.py  3494511389f1_parking_table_edit.py  41e9fa337909_parking_edir.py  4dbdfd2e8fb2_parking_record_edit.py  65db85ccd773_parking_edit2.py  6b4c61409c77_initial_migration.py  6c2e4b85d3b9_parking_table_adding_back.py  80c2f2b2ed37_add_parkinglot.py  8a5cb0b9ba04_vehicle_mmodel_edit3.py  92e299daa929_parking_edit3.py  933557793697_parking_rate_added_backs.py  93ae684ff0f7_user_phone_change.py  a1e1c8b773a4_parking_record_edit4.py  b217ba6fe982_initial_migration.py  b2d8a4f96551_vehicle_mmodel_license_to_text.py  b77bce51625c_vehicle_mmodel_back.py  c701a29a1935_vehicle_mmodel_edit.py  d3e6cddbf8c8_user_password_change2.py  d6076bb95d7d_user_phone_edit2.py  e08a603f987f_parking_rates_.py  e125646cf932_user_banned_false.py  e5600a6d378e_added_lot_and_rates.py  f0fa6fd07e90_parking_rates_spaces.py  f8bb8217e067_parking_rates.py
notebook_example/: Car-number-plate-recognition_Ex.ipynb  model.keras
parking_app/: pyproject.toml
parking_app/parking_app/: .env_example  docker-compose.yml  main.py
parking_app/parking_app/src/conf/: config.py
parking_app/parking_app/src/database/: db.py
parking_app/parking_app/src/models/: models.py
parking_app/parking_app/src/repository/: admin.py
parking_app/parking_app/src/routes/: admin.py  users.py
parking_app/parking_app/src/schemas/: user.py
parking_app/parking_app/src/services/: email.py
services/: auth.py  email.py
services/templates/: index.html  login.html  profile.html  register.html
src/: .env
src/conf/: config.py  messages.py
src/database/: db.py
src/models/: models.py
src/repository/: admin.py  users.py
src/routes/: admin.py  auth.py  image.py  users.py
src/schemas/: admin.py  auth.py  user.py  users.py
src/services/: auth.py  email.py  role.py
src/services/cv_service/: initiate.py  lic_rec.py  requirements.txt  util.py  visualize_image.py
src/services/cv_service/sort/: sort.py
src/services/templates/: email_template.html  index.html  login.html  password_template.html  profile.html  register.html  reset_password.html
src/utils/: utils.py
