[tool.poetry]
name = "PARKING-MANAGEMENT"
version = "0.1.0"
description = ""
authors = ["Serghii777 <142201494+Serghii777@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "PARKING-MANAGEMENT" }]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.2"
redis = "^5.0.8"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
libgravatar = "^1.0.4"
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.9"
exceptiongroup = "^1.2.2"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
contourpy = "1.2.1"
cycler = "0.12.1"
easyocr = "1.7.0"
filelock = "3.15.4"
filterpy = "1.4.5"
fsspec = "2024.6.1"
idna = "3.7"
imageio = "2.35.0"
intel-openmp = "2021.4.0"
jinja2 = "3.1.4"
lazy-loader = "0.4"
markupsafe = "2.1.5"
matplotlib = "3.9.2"
mkl = "2021.4.0"
mpmath = "1.3.0"
networkx = "3.3"
ninja = "1.11.1.1"
numpy = ">=1.26.0"
opencv-python = "4.7.0.72"
opencv-python-headless = "4.10.0.84"
packaging = "24.1"
pandas = "2.0.2"
pillow = "9.5.0"
psutil = "6.0.0"
pyclipper = "1.3.0.post5"
pyparsing = "3.1.2"
python-bidi = "0.6.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml = "6.0.2"
requests = "2.32.3"
scikit-image = "0.24.0"
scipy = "^1.14.1"
seaborn = "0.13.2"
shapely = "2.0.5"
six = "1.16.0"
sympy = "1.13.2"
tbb = "2021.13.1"
tifffile = "2024.8.10"
torch = "2.3.1"
torchvision = "0.18.1"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
ultralytics = "8.0.114"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
